2013-11-27 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/setup.php: fixed the update of values for
	update manager.

2013-11-27 Miguel de Dios  <miguel.dedios@artica.es>
	
	* integria_demo.sql, install.php, integria_dbdata.sql: set the
	default values for the update manager.

2013-11-27  Dario Rodriguez <dario@artica.es>

	*  operation/common/download_file.php,
 	operation/projects/task_files.php: Unified file download for
	project task files.
	* operation/projects/project_download_file.php: File deleted.

2013-11-27 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/setup.php: fixed the set empty license.

2013-11-27 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/setup.php: restored the lost Dario's field, maybe
	it is lost with some or my commits.

2013-11-27 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/update_manager.php: added new parameters required
	for the update manager server.

2013-11-26 Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css: Added new styles to
	get a cleaner UI on update manager.

2013-11-26 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/setup.php, integria_dbdata.sql: set the default data
	for the update manager.

2013-11-26  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php,
	include/config_process.php: Moved code from 
	config.inc.php to config_process.php

2013-11-26  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php: Removed comment to keep
	comments up to date.

2013-11-26  Dario Rodriguez <dario@artica.es>

	* include/functions_graph.php,
	include/graphs/fgraph.php,
	include/functions_incidents.php,
	operation/invoices/invoice_stats.php,
	operation/leads/lead_statistics.php: Adapted graphs and report
	to user new base url which support http, https and ports.

2013-11-25  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php,
	install.php,
	godmode/setup/setup.php: Fixed an error generating