@@ -1,3 +1,8 @@
+2013-11-27  Dario Rodriguez <dario@artica.es>
+	
+	* include/functions_update_manager.php: Fixed some strings
+	missed in update manager view.
+
 2013-11-27 Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* godmode/setup/setup.php: fixed the update of values for
